--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>AniMend | About Us</title>
+        <title>AniMend | Home</title>
         <link rel="icon" href="img/logo.png" />
         <link rel="stylesheet" href="style.css" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,13 +15,24 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
             integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
             crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Habibi&display=swap" rel="stylesheet">
     </head>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Habibi&display=swap');
+
+        * {
+            font-family: 'Habibi', serif;
+        }
+    </style>
 
     <body>
         <header>
             <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#home.html">
+                    <a class="navbar-brand" href="home.html">
                         <img src="img/logo.png" width="100px" height="74" style="margin: 0 15px;"
                             class="d-inline-block align-text-center">
                         AniMend
@@ -33,13 +44,13 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#home.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#anime.html">Anime List</a>
+                                <a class="nav-link" href="anime.html">Anime List</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#movie.html">Movies</a>
+                                <a class="nav-link" href="movie.html">Movies</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -48,76 +59,79 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a class="dropdown-item" href="#Action">Action</a>
+                                        <a class="dropdown-item" href="action">Action</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#Adventure">Adventure</a>
+                                        <a class="dropdown-item" href="adventure">Adventure</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#Comedy">Comedy</a>
+                                        <a class="dropdown-item" href="comedy">Comedy</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="#Crime">Crime</a></li>
+                                    <li><a class="dropdown-item" href="crime">Crime</a></li>
                                     <li>
-                                        <a class="dropdown-item" href="#Demons">Demons</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="#Detective">Detective</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#Drama">Drama</a></li>
-                                    <li>
-                                        <a class="dropdown-item" href="#Fantasy">Fantasy</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#Game">Game</a></li>
-                                    <li>
-                                        <a class="dropdown-item" href="#Historical">Historical</a>
+                                        <a class="dropdown-item" href="demons">Demons</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#Horror">Horror</a>
+                                        <a class="dropdown-item" href="detective">Detective</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="drama">Drama</a></li>
+                                    <li>
+                                        <a class="dropdown-item" href="fantasy">Fantasy</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="game">Game</a></li>
+                                    <li>
+                                        <a class="dropdown-item" href="historical">Historical</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#Isekai">Isekai</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#Magic">Magic</a></li>
-                                    <li>
-                                        <a class="dropdown-item" href="#Martial">Martial Arts</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#Mecha">Mecha</a></li>
-                                    <li>
-                                        <a class="dropdown-item" href="#Militiary">Military</a>
+                                        <a class="dropdown-item" href="horror">Horror</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#Psychological">Psychological</a>
+                                        <a class="dropdown-item" href="isekai">Isekai</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="magic">Magic</a></li>
+                                    <li>
+                                        <a class="dropdown-item" href="martial">Martial Arts</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="mecha">Mecha</a></li>
+                                    <li>
+                                        <a class="dropdown-item" href="militiary">Military</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#Romance">Romance</a>
+                                        <a class="dropdown-item" href="psychological">Psychological</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#School">School</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#SciFi">Sci-Fi</a></li>
-                                    <li>
-                                        <a class="dropdown-item" href="#Seinen">Seinen</a>
+                                        <a class="dropdown-item" href="romance">Romance</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#Shounen">Shounen</a>
+                                        <a class="dropdown-item" href="school">School</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="sciFi">Sci-Fi</a></li>
+                                    <li>
+                                        <a class="dropdown-item" href="seinen">Seinen</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#Slice">Slice of Life</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#Sport">Sport</a></li>
-                                    <li>
-                                        <a class="dropdown-item" href="#Supernatural">Supernatural</a>
+                                        <a class="dropdown-item" href="shounen">Shounen</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#Thriller">Thriller</a>
+                                        <a class="dropdown-item" href="slice">Slice of Life</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="sport">Sport</a></li>
+                                    <li>
+                                        <a class="dropdown-item" href="supernatural">Supernatural</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#Time">Time Travel</a>
+                                        <a class="dropdown-item" href="thriller">Thriller</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="time">Time Travel</a>
                                     </li>
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link">Link</a>
+                                <a class="nav-link" href="link.html">Link</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html">About Us</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
@@ -129,19 +143,20 @@
             </nav>
         </header>
 
-        <div class="container">
+        <div class="container" style="max-width: 850px;">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-sm-4">
                     <img src="https://audimediacenter-a.akamaihd.net/system/production/media/1282/images/bde751ee18fe149036c6b47d7595f6784f8901f8/AL090142_full.jpg?1581961854"
                         width="200px" height="160px">
                 </div>
-                <div class="col-sm-6" style="background-color: bisque;">
+                <div class="col-md-7" style="background-color: bisque;">
                     <h3>Profile</h3>
                     <hr>
                     <p>Nama : Aldi</p>
                     <p>Tanggal Lahir: 7 April 2003</p>
                     <p>Agama: Katolik</p>
                     <p>Profesi: Mahasiswa</p>
+                    <a href="" style="text-decoration:none;">Read More >></a>
                 </div>
             </div>
         </div>
